[package]
name = "jolt-akita"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Akita batch opening adapter for the Jolt zkVM"

[lints]
workspace = true

[dependencies]
akita-config = { git = "https://github.com/LayerZero-Labs/akita.git", rev = "b7b15524aac9f24b636358482f42dbc0fef1adc3", default-features = false }
akita-field = { git = "https://github.com/LayerZero-Labs/akita.git", rev = "b7b15524aac9f24b636358482f42dbc0fef1adc3", default-features = false, features = [
  "jolt-compat",
] }
akita-pcs = { git = "https://github.com/LayerZero-Labs/akita.git", rev = "b7b15524aac9f24b636358482f42dbc0fef1adc3", default-features = false }
akita-prover = { git = "https://github.com/LayerZero-Labs/akita.git", rev = "b7b15524aac9f24b636358482f42dbc0fef1adc3", default-features = false }
akita-transcript = { git = "https://github.com/LayerZero-Labs/akita.git", rev = "b7b15524aac9f24b636358482f42dbc0fef1adc3", default-features = false }
akita-types = { git = "https://github.com/LayerZero-Labs/akita.git", rev = "b7b15524aac9f24b636358482f42dbc0fef1adc3", default-features = false }
jolt-crypto.workspace = true
jolt-field.workspace = true
jolt-openings.workspace = true
jolt-poly.workspace = true
jolt-transcript.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_json = { workspace = true, features = ["std"] }
