[package]
name = "jolt-akita"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Akita batch opening adapter for the Jolt zkVM"

[lints]
workspace = true

[dependencies]
akita-config.workspace = true
akita-field.workspace = true
akita-pcs.workspace = true
akita-prover.workspace = true
akita-transcript.workspace = true
akita-types.workspace = true
jolt-crypto.workspace = true
jolt-field = { workspace = true, features = ["akita"] }
jolt-openings.workspace = true
jolt-poly.workspace = true
jolt-transcript.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
serde_json = { workspace = true, features = ["std"] }
