[package]
name = "jolt-backends"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Backend compute implementations for modular Jolt proving"
repository = "https://github.com/a16z/jolt"
keywords = ["SNARK", "zkvm", "prover"]
categories = ["cryptography"]

[lints]
workspace = true

[features]
default = ["cpu"]
cpu = []
field-inline = []
zk = []

[dependencies]
jolt-field.workspace = true
jolt-openings.workspace = true
jolt-poly.workspace = true
jolt-witness.workspace = true
thiserror.workspace = true

[dev-dependencies]
jolt-field.workspace = true
jolt-openings = { workspace = true, features = ["test-utils"] }
