[package]
name = "jolt-bench"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Performance benchmark harness — jolt-core vs modular stack on canonical programs"
repository = "https://github.com/a16z/jolt"

[lints]
workspace = true

[features]
default = []
# The older full-stack `src/main.rs` benchmark is kept out of default builds
# while its modular-stack path is brought up to the current crate layout.
legacy-stack-bench = []

[dependencies]
# CLI and JSON
clap = { workspace = true }
serde = { workspace = true, default-features = false, features = [
  "derive",
  "std",
] }
serde_json = { workspace = true, features = ["std"] }
strum.workspace = true

# Measurement
memory-stats = { workspace = true }
mimalloc = { workspace = true }

# Serialization
ark-serialize = { workspace = true, features = ["std"] }
bincode = { workspace = true }
postcard = { workspace = true, features = ["use-std"] }

# Reference stack (jolt-core)
ark-bn254 = { workspace = true }
ark-ff = { workspace = true, features = ["std"] }
common = { workspace = true, features = ["std"] }
jolt-core = { workspace = true, features = ["host"] }
tracer = { workspace = true, features = ["std"] }

# Inline builders — linked for their `#[ctor::ctor]` auto-registration so
# guest programs that use SHA2/Keccak256 inline sequences can be traced.
jolt-inlines-sha2 = { workspace = true, features = ["host"] }
jolt-inlines-keccak256 = { workspace = true, features = ["host"] }

# Modular stack (muldiv-only runner)
bolt = { path = "../bolt" }
jolt-dory = { path = "../jolt-dory" }
jolt-field = { path = "../jolt-field", features = ["bn254"] }
jolt-host = { package = "jolt-trace", path = "../jolt-trace" }
jolt-instructions = { package = "jolt-riscv", path = "../jolt-riscv" }
jolt-openings = { path = "../jolt-openings" }
jolt-poly = { path = "../jolt-poly" }
jolt-r1cs = { path = "../jolt-r1cs" }
jolt-kernels = { path = "../jolt-kernels" }
jolt-transcript = { path = "../jolt-transcript" }
jolt-prover = { path = "../jolt-prover" }
jolt-verifier = { path = "../jolt-verifier" }
jolt-profiling = { path = "../jolt-profiling" }
jolt-witness = { path = "../jolt-witness" }
num-traits = { workspace = true }

[[bin]]
name = "jolt-bench"
path = "src/main.rs"
required-features = ["legacy-stack-bench"]

[[bin]]
name = "bolt-stage1"
path = "src/bin/bolt_stage1.rs"

[[bin]]
name = "bolt-stage"
path = "src/bin/bolt_stage.rs"
